--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,113 +1,94 @@
-.container {
-  padding: 0 2rem;
+.border{
+  border: 1px solid black;
+  width: 100%;
+  height: 100px;
 }
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.header{
+  
+  padding: 0.8rem;
+  width: 100%;
+  height: auto;
+}
+.logo-container{
+  width: 100%;
+  height: 80px;
+}
+.main-container{
+  width: 100%;
+  min-height: 400px;
+  background-image: url("/images/main.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  padding: 20px 30px;
+  align-items: flex-end;
+  
 }
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.name-container{
+  width: auto;
+  height: 50px;
+  border-radius: 20px;
+  background: linear-gradient(135deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  color: white;
+  padding: 20px;
+  font-size: 1.2rem;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
+.mic-container{
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  background: linear-gradient(135deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.students-container{
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 47% 47%;
+  justify-content: center;
+  padding: 20px 10px;
+  column-gap: 20px;
+  row-gap: 20px;
 }
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.students-card{
+  border-radius: 20px;
+  height: 210px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: flex-end;
 }
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.pagination-container{
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.footer-container{
+  border: 1px solid #00000026;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
 }
-
+.button-container{
+  border: 1px solid #00000026;
+  background: #FFFFFF;
+  width: 90px;
+  height: 90px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+}
 @media (max-width: 600px) {
   .grid {
     width: 100%;
